DMP-1696 - initial draft